--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               ACL-Regex
-version:            0.0001_02
+version:            0.0001
 abstract:           Class to generate access controls using PCRE
 author:
     - Peter Blair (pblair@cpan.org)
